# steam-game-critic-score

./: .gitignore  0_scratch.ipynb  Dockerfile  Guide_for_evaluators.md  README.md  pyproject.toml
app/: help_funcs.py  main.py
data/: df_conf_tier_v1.parquet  df_y_v1.parquet  df_y_z_v1.parquet
interactives/: index.html
models/: GSCV_XGBRegressor_v3.pkl  StandardScalers.pkl  final_model.pkl  temp.pkl
notebooks/: 2_tune_models.ipynb  train_best_XGBR.py
notebooks/.ipynb_checkpoints/: 1_conf_tier-checkpoint.ipynb  2_tune_models-checkpoint.ipynb
temp/: GSCV_XGBRegressor_v1.pkl  GSCV_XGBRegressor_v2.pkl
