[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "fastparquet>=2024.11.0",
    "ipympl>=0.9.8",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
    "viztracer>=1.1.1",
    "xgboost>=3.1.1",
    "ydata-profiling>=4.18.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
    "psutil>=7.1.3",
    "pympler>=1.1",
    "tqdm>=4.67.1",
]
